--- a/CSS/section/style-order.scss
+++ b/CSS/section/style-order.scss
@@ -9,6 +9,7 @@
 .order-bg {
     justify-content: center;
     width: 95%;
+    position: relative;
 }
 
 .order__title {
@@ -204,3 +205,61 @@
     font-size: rem(14px);
     margin-left: rem(15px);
 }
+
+
+
+.form__modal-bg {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    // background-color: rgba(#2f3234, 0);
+    z-index: 10;
+
+    cursor:pointer;
+
+    display: none;
+}
+
+.form__modal {
+    background: #ffffff;
+    width: rem(240px);
+    height: rem(140px);
+
+    border-radius: 5px;
+    box-shadow:  0 0 15px rgba(0,0,0,0.9);
+
+    position: absolute;
+    top: 35%; 
+    left: 50%; 
+    margin-left: rem(-110px);
+    z-index: 15;
+    vertical-align: center;
+    text-align: center;
+    padding: rem(10px) rem(20px);
+    opacity: 0;
+
+    display: none;
+}
+
+.modal__text_success, .modal__text_fail {
+    display: inline-block;
+}
+
+.form__close {
+    @include btn(#e45028);
+    font-size: rem(13px);
+
+    a {
+        color: #ffffff;
+    }
+}
+
+// .modal__text {
+//     font-size: 14px;
+//     font-family: ubuntulight;
+//     color: #2f3234;
+//     padding: 0;
+//     line-height: 24px;
+// }
