fullsize menu behavior changed

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -24,3 +24,5 @@ $transit3: 360px;
 @import "section/style-map.scss";
 // dots
 @import "section/aside.scss";
+//fullsize-menu;
+@import "section/fullsize-menu.scss";
