--- a/CSS/main.css
+++ b/CSS/main.css
@@ -437,62 +437,6 @@ a {
   height: 100%;
   fill: #ffffff; }
 
-.fullscreen {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: rgba(47, 50, 52, 0.95);
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  -webkit-transform: scale(0);
-  -ms-transform: scale(0);
-  transform: scale(0);
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  -o-transition: transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s; }
-  .fullscreen_shown {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1); }
-
-.fullscreen__wrapper {
-  position: relative; }
-
-.fullscreen__close {
-  width: 1.25rem;
-  height: 1.25rem; }
-
-.fullscreen__list {
-  text-align: center; }
-
-.fullscreen__item {
-  padding: 1.875rem 0;
-  position: relative; }
-  .fullscreen__item:after {
-    display: inline-block;
-    content: ' ';
-    width: 5px;
-    height: 5px;
-    border-radius: 2.5px;
-    background-color: #ffffff;
-    position: absolute;
-    left: 50%;
-    bottom: 0; }
-  .fullscreen__item:last-child:after {
-    display: none; }
-
-.fullscreen__link {
-  color: #ffffff;
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-family: ubunturegular;
-  padding: 1.875rem 0; }
-
 .webest {
   background: url(../IMG2/cheese-dip.png) no-repeat left 1.5625rem, url(../IMG2/seeds.png) no-repeat left 11.875rem, url(../IMG2/tomato-slices.png) no-repeat 3.5rem bottom, url(../IMG2/tomato.png) no-repeat right bottom, url(../IMG2/cheese-lists.png) no-repeat right bottom, url(../IMG2/lettuce.png) no-repeat right 3.3125rem, url(../IMG2/wood.png) no-repeat;
   background-size: auto,auto,auto,auto,auto,auto, cover;
@@ -2187,3 +2131,59 @@ a {
 
 .dots__item {
   margin-bottom: 0.3125rem; }
+
+.fullscreen {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(47, 50, 52, 0.95);
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  -webkit-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  -o-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s; }
+  .fullscreen_shown {
+    -webkit-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1); }
+
+.fullscreen__wrapper {
+  position: relative; }
+
+.fullscreen__close {
+  width: 1.25rem;
+  height: 1.25rem; }
+
+.fullscreen__list {
+  text-align: center; }
+
+.fullscreen__item {
+  padding: 1.875rem 0;
+  position: relative; }
+  .fullscreen__item:after {
+    display: inline-block;
+    content: ' ';
+    width: 5px;
+    height: 5px;
+    border-radius: 2.5px;
+    background-color: #ffffff;
+    position: absolute;
+    left: 50%;
+    bottom: 0; }
+  .fullscreen__item:last-child:after {
+    display: none; }
+
+.fullscreen__link {
+  color: #ffffff;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-family: ubunturegular;
+  padding: 1.875rem 0; }
